Minor changes and recompile in Scattering_forest. Added to SGT_Training.

--- a/SGT_Training.ipynb
+++ b/SGT_Training.ipynb
@@ -2,13 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "#import necessary libraries\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.style as style\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "#define plotting style that I like\n",
+    "style.use('fivethirtyeight')"
    ]
   },
   {
@@ -95,10 +101,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.style as style\n",
-    "style.use('fivethirtyeight')\n",
-    "\n",
     "def generate_plot(rxn_observable, reac_observ):\n",
     "    #define values to be plotted\n",
     "    energy=rxn_observable['energy']\n",
@@ -121,13 +123,6 @@
     "    ax4.plot(energy, angle, 'mo', alpha=0.5)\n",
     "    ax4.set_xlabel('Energy'); ax4.set_ylabel('Scattering Angle'); ax4.set_title('Energy vs. Scattering Angle')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -174,10 +169,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "import numpy as np\n",
-    "\n",
     "def split_and_score(size, number_of_random_states):\n",
     "    test=np.zeros(number_of_random_states)\n",
     "    train=np.zeros(number_of_random_states)\n",
