combined NP_SGT and NP_SGTT into one random forrest. Minor changes to other programs with no impact on functionality.

--- a/SGT_and_SGTT_Combined.ipynb
+++ b/SGT_and_SGTT_Combined.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,15 +18,8 @@
     "\n",
     "\n",
     "#define plotting style that I like\n",
-    "style.use('fivethirtyeight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "style.use('seaborn-whitegrid')\n",
+    "\n",
     "#define constants\n",
     "m_p=938.27231 #MeV\n",
     "m_n=939.56563 #MeV\n",
@@ -34,48 +27,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#read data file\n",
-    "data = pd.read_csv('CSV_files/np.sgt_and_sgtt.csv')"
+    "### Define fucntions to do necessary operations for creating Random Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fucntions for k for each rxn type\n",
-    "def k_pp(energy):\n",
-    "    value=np.sqrt(((m_p**2)*(energy)*(energy+2*m_n))/(((m_p+m_n)**2)+(2*energy*m_p))) \n",
-    "    k_pp=value/hbar_c \n",
-    "    return k_pp\n",
-    "def k_np(energy):\n",
-    "    value=np.sqrt((1/2)*m_p*energy) \n",
-    "    k_np=value/hbar_c \n",
-    "    return k_np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add k*experimental_value column\n",
-    "def change_np(rxn_observable):\n",
-    "    rxn_observable['K*experimental_value'] = rxn_observable.apply(lambda row: (row.experimental_value * k_np(row.energy)),axis=1)\n",
-    "def change_pp(rxn_observable):\n",
-    "    rxn_observable['K*experimental_value'] = rxn_observable.apply(lambda row: (row.experimental_value * k_pp(row.energy)),axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,15 +51,24 @@
     "    seconds = seconds\n",
     "    print('')\n",
     "    print('Cell runtime:', \"%s days, %s hours, %s minutes, %s seconds\" % (day, hour, minutes, seconds) )\n",
-    "    print('')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print('')\n",
+    "    \n",
+    "# fucntions for k for each rxn type\n",
+    "def k_pp(energy):\n",
+    "    value=np.sqrt(((m_p**2)*(energy)*(energy+2*m_n))/(((m_p+m_n)**2)+(2*energy*m_p))) \n",
+    "    k_pp=value/hbar_c \n",
+    "    return k_pp\n",
+    "def k_np(energy):\n",
+    "    value=np.sqrt((1/2)*m_p*energy) \n",
+    "    k_np=value/hbar_c \n",
+    "    return k_np\n",
+    "\n",
+    "# add k*experimental_value column\n",
+    "def change_np(rxn_observable):\n",
+    "    rxn_observable['K*experimental_value'] = rxn_observable.apply(lambda row: (row.experimental_value * k_np(row.energy)),axis=1)\n",
+    "def change_pp(rxn_observable):\n",
+    "    rxn_observable['K*experimental_value'] = rxn_observable.apply(lambda row: (row.experimental_value * k_pp(row.energy)),axis=1)\n",
+    "\n",
     "def split_and_score(size, number_of_random_states):\n",
     "    test=np.zeros(number_of_random_states)\n",
     "    train=np.zeros(number_of_random_states)\n",
@@ -121,55 +90,8 @@
     "    train_ave=np.mean(train)\n",
     "    test_var=np.sqrt(np.var(test))\n",
     "    train_var=np.sqrt(np.var(train))\n",
-    "    return test_ave, test_var, train_ave, train_var"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## EVERYTHING THAT NEEDS CHANGED SHOULD BE IN HERE\n",
+    "    return test_ave, test_var, train_ave, train_var\n",
     "\n",
-    "#define number of random states\n",
-    "number_of_random_states=5\n",
-    "\n",
-    "#define intervals of test size\n",
-    "intervals=9 # 1:50%, 3:25%, 4:20%, 9:10%, 19:5%, 24:4%, 49:2%, 99:1%"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#x-axis\n",
-    "if intervals==1:\n",
-    "    sample_size=[50] #50% intervals\n",
-    "elif intervals==3:\n",
-    "    sample_size=list(range(25,76,25)) #25% intervals\n",
-    "elif intervals==4:\n",
-    "    sample_size=list(range(20,81,20)) #20% intervals \n",
-    "elif intervals==9:\n",
-    "    sample_size=list(range(10,91,10)) #10% intervals\n",
-    "elif intervals==19:\n",
-    "    sample_size=list(range(5,96,5)) #5% intervals\n",
-    "elif intervals==24:\n",
-    "    sample_size=list(range(4,97,4)) #4% intervals\n",
-    "elif intervals==49:\n",
-    "    sample_size=list(range(2,99,2)) #2% intervals\n",
-    "elif intervals==99:\n",
-    "    sample_size=list(range(1,100,1)) #1% intervals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def train_and_plot(rxn_observable, reac_observ):\n",
     "    #start timer\n",
     "    rxn_observable_time = time.time()\n",
@@ -228,10 +150,181 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## EVERYTHING THAT NEEDS CHANGED SHOULD BE IN HERE\n",
+    "\n",
+    "#define number of random states\n",
+    "number_of_random_states=5\n",
+    "\n",
+    "#define intervals of test size\n",
+    "intervals=9 # 1:50%, 3:25%, 4:20%, 9:10%, 19:5%, 24:4%, 49:2%, 99:1%\n",
+    "\n",
+    "#x-axis\n",
+    "if intervals==1:\n",
+    "    sample_size=[50] #50% intervals\n",
+    "elif intervals==3:\n",
+    "    sample_size=list(range(25,76,25)) #25% intervals\n",
+    "elif intervals==4:\n",
+    "    sample_size=list(range(20,81,20)) #20% intervals \n",
+    "elif intervals==9:\n",
+    "    sample_size=list(range(10,91,10)) #10% intervals\n",
+    "elif intervals==19:\n",
+    "    sample_size=list(range(5,96,5)) #5% intervals\n",
+    "elif intervals==24:\n",
+    "    sample_size=list(range(4,97,4)) #4% intervals\n",
+    "elif intervals==49:\n",
+    "    sample_size=list(range(2,99,2)) #2% intervals\n",
+    "elif intervals==99:\n",
+    "    sample_size=list(range(1,100,1)) #1% intervals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train and Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>energy</th>\n",
+       "      <th>K*experimental_value</th>\n",
+       "      <th>observable_   SGT</th>\n",
+       "      <th>observable_   SGTT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>2.243152</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000100</td>\n",
+       "      <td>22.491891</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000400</td>\n",
+       "      <td>44.863041</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     energy  K*experimental_value  observable_   SGT   observable_   SGTT\n",
+       "0  0.000001              2.243152                   1                   0\n",
+       "1  0.000100             22.491891                   1                   0\n",
+       "2  0.000400             44.863041                   1                   0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#read data file\n",
+    "features = pd.read_csv('CSV_files/np.sgt_and_sgtt.csv')\n",
+    "#add k*exp column\n",
+    "change_np(features)\n",
+    "#remove columns that are not needed\n",
+    "features = features.drop(columns=['scattering_angle', 'statistical_error', 'systematic_error', 'normalization', 'experimental_value', 'reaction_type'])\n",
+    "features.head(3)\n",
+    "\n",
+    "#One-hot encode\n",
+    "features = pd.get_dummies(features)\n",
+    "features.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Number of features of the model must match the input. Model n_features is 3 and input n_features is 1 ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-a338f0720a09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# Use the forest's predict method on the test data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/forest.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    686\u001b[0m         \u001b[0mcheck_is_fitted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'estimators_'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    687\u001b[0m         \u001b[0;31m# Check data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 688\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_X_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    689\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    690\u001b[0m         \u001b[0;31m# Assign chunk of trees to jobs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/forest.py\u001b[0m in \u001b[0;36m_validate_X_predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    360\u001b[0m                                  \"call `fit` before exploiting the model.\")\n\u001b[1;32m    361\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 362\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimators_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_X_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcheck_input\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    363\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    364\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/sklearn/tree/tree.py\u001b[0m in \u001b[0;36m_validate_X_predict\u001b[0;34m(self, X, check_input)\u001b[0m\n\u001b[1;32m    386\u001b[0m                              \u001b[0;34m\"match the input. Model n_features is %s and \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    387\u001b[0m                              \u001b[0;34m\"input n_features is %s \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 388\u001b[0;31m                              % (self.n_features_, n_features))\n\u001b[0m\u001b[1;32m    389\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    390\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Number of features of the model must match the input. Model n_features is 3 and input n_features is 1 "
+     ]
+    }
+   ],
+   "source": [
+    "# Labels are the values we want to predict\n",
+    "labels = np.array(features['K*experimental_value'])\n",
+    "# Remove the labels from the features\n",
+    "features = features.drop('K*experimental_value', axis = 1)\n",
+    "# Saving feature names for later use\n",
+    "feature_list = list(features.columns)\n",
+    "# Convert to numpy array\n",
+    "features = np.array(features)\n",
+    "\n",
+    "train_features, test_features, train_labels, test_labels = train_test_split(features, labels, test_size = 0.25)\n",
+    "\n",
+    "rf = RandomForestRegressor(n_estimators= 1000)\n",
+    "# Train the model on training data\n",
+    "rf.fit(train_features, train_labels);\n",
+    "\n",
+    "#make predictions \n",
+    "#SGT\n",
+    "E_SGT = \n",
+    "SGT_predictions = rf.predict(E_SGT)\n",
+    "#SGTT\n",
+    "E_SGTT = \n",
+    "SGTT_predictions = rf.predict(E_SGTT)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_and_plot()"
+   ]
   }
  ],
  "metadata": {
